traces/bug_143.txt
examples++-load/gmsh.cpp:254: error: DEAD_STORE
  The value written to &partition (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:254:3: Write of unused value
252.   		int physical = (numTags > 0) ? data[4 - numTags] : 0;
253.   		int elementary = (numTags > 1) ? data[4 - numTags + 1] : 0;
254.   		int partition = (numTags > 2) ? data[4 - numTags + 2] : 0;
         ^
255.   		int *indices = &data[numTags + 1];
256.   		
